--- a/package.json
+++ b/package.json
@@ -48,9 +48,12 @@
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.17.1",
     "gatsby-plugin-styled-components": "^5.17.0",
+    "gatsby-source-contentful": "^7.19.1",
+    "gatsby-theme-advanced": "*",
     "gatsby-theme-amaranth": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.39.1",
     "styled-components": "^5.3.3"
   },
