--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "dotenv": "^16.0.1",
     "gatsby": "^4.17.1",
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-source-contentful": "^7.19.1",
